# TreeForge

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: architecture.md
examples/: basic_usage.py
notebooks/: 01_eda.ipynb
scripts/: architecture_diagram.py  visualize_confusion_matrix.py  visualize_tree.py
src/: config.py
src/benchmark/: compare.py
src/data/: loader.py
src/eda/: summary.py  visualization.py
src/evaluation/: metrics.py
src/metrics/: impurity.py
src/model_selection/: cross_validation.py  grid_search.py  split.py
src/pipeline/: train.py
src/tree/: builder.py  classifier.py  node.py  splitter.py  tree.py
src/visualization/: confusion_matrix.py  tree_plot.py
tests/: test_builder.py  test_classifier.py  test_compare.py  test_cross_validation.py  test_examples_smoke.py  test_grid_search.py  test_impurity.py  test_loader.py  test_metrics.py  test_node.py  test_split.py  test_splitter.py  test_summary.py  test_tree.py  test_visualization.py
treeforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
