[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treeforge"
version = "1.0.0"
description = "A from-scratch Decision Tree implementation, benchmarked on the MAGIC Gamma Telescope dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "TreeForge Contributors" }]
keywords = ["decision-tree", "machine-learning", "from-scratch", "classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=5.0.0",
    "flake8>=6.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "graphviz>=0.20",
]

[tool.setuptools.packages.find]
include = ["src*"]
